# saytype

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RELEASING.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
docs/: macos-swift-helper-plan.md
docs/superpowers/plans/: 2026-06-22-debug-audio-playback.md  2026-06-22-neural-vad.md
docs/superpowers/specs/: 2026-06-21-neural-vad-design.md  2026-06-21-neural-vad-design.zh.md  2026-06-22-debug-audio-playback-design.md  2026-07-01-cross-platform-support-design.md
scripts/: bump-tauri-version.js  collect-artifacts.js  sign.env.example
src/: macos-text-inserter-koffi.js  main.js  permission-manager.js  windows-text-inserter-koffi.js
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  history.rs  hotkey.rs  lib.rs  main.rs  migration.rs  settings.rs  state.rs  tray.rs
src-tauri/src/platform/: fallback.rs  macos.rs  mod.rs
src/services/: openai-transcription.js  transcription-service.js
src/views/: i18n.js  input-prompt.css  input-prompt.html  input-prompt.js  ipc-bridge.js  main.css  main.html  main.js  settings.css  settings.html  settings.js  vad-decision.mjs  vad-decision.test.mjs  vad-gate.js
