[package]
name = "whispline"
version = "1.0.96"
description = "Voice input method software"
authors = ["Tao"]
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/hellotaotao/WhispLine"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "whispline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0"
arboard = "3.6"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "6.0"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rdev = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
objc = "0.2"

[dev-dependencies]
tempfile = "3"
